--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -27,6 +27,7 @@ abline(simp)
 summary.lm(simp)
 ```
 
+The bear neck is about 20 inches around the neck, and also 57 inches in length. The residual standard error is 5.376, and the R-squared is .7524
 
 ## Compare all models that predict LENGTH other than NECK. Then order them from worst to best by its value of Adjusted-Rsquared (bigger is better), or by RSE (residual standard error) where smaller is better. 
 
