--- a/demoRegression-master/simpleLM.rmd
+++ b/demoRegression-master/simpleLM.rmd
@@ -124,6 +124,6 @@ The Residual standard error is 7.511 while the adjusted R-square is 0.5073 Rank 
 
 
 
-Conclusion: In conclusion with all the rankings set in place you have to take into consideration the greatest residual which is headlen Ranked at #1 to dead last at the bear headwth which is ranked at #6 today we got to see as a class the statistical importance of the residual number, and also the R square as whole!
+Conclusion: In conclusion with all the rankings set in place you have to take into consideration the greatest residual which is headlen Ranked at #1 to dead last at the bear headwth which is ranked at #6 today we got to see as a class the statistical importance of the residual number, and also the R square as whole! So in total at rank #1 we have the bears healen, at Rank #2 we have the bears age, At rank #3 we have the bears weight, at rank #4 we have the bears neck, at rank #5 we have the bears chest, Then at dead last in the rankings we have #6 the bears headwth
 
 
